Bug 521187 - Cannot see cursor sizes when display is scaled to 120 %
Summary: Cannot see cursor sizes when display is scaled to 120 %
Status: RESOLVED FIXED
Alias: None
Product: systemsettings
Classification: Applications
Component: kcm_cursortheme (other bugs)
Version First Reported In: unspecified
Platform: CachyOS Linux
: NOR normal
Target Milestone: ---
Assignee: Plasma Bugs List
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2026-06-07 21:55 UTC by Zenon
Modified: 2026-07-17 08:04 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 6.7.4
Sentry Crash Report:


Attachments
Showcasing the bug, cursor sizes not visible (149.56 KB, image/png)
2026-06-07 21:55 UTC, Zenon
Details
Showing display settings for reference (110.19 KB, image/png)
2026-06-07 21:56 UTC, Zenon
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Zenon 2026-06-07 21:55:30 UTC
***
If you're not sure this is actually a bug or valid feature request, instead post about it at https://discuss.kde.org

If you're reporting a crash, attach a backtrace with debug symbols; see https://community.kde.org/Guidelines_and_HOWTOs/Debugging/How_to_create_useful_crash_reports

Please remove this comment after reading and before submitting - thanks!
***

DESCRIPTION


STEPS TO REPRODUCE
1. Install CachyOS with KDE
2. Change display scaling to 120 % on a 27" screen
3. Try to change cursor size

OBSERVED RESULT
Larger cursor sizes not visible.

EXPECTED RESULT
Larger cursor sizes visible.

SOFTWARE/OS VERSIONS
Operating System: CachyOS Linux
KDE Plasma Version: 6.6.5
KDE Frameworks Version: 6.26.0
Qt Version: 6.11.1
Kernel Version: 7.0.11-1-cachyos (64-bit)
Graphics Platform: Wayland
Processors: 12 × Intel® Core™ i7-10750H CPU @ 2.60GHz
Memory: 16 GiB of RAM (15.4 GiB usable)
Graphics Processor 1: Intel® UHD Graphics
Graphics Processor 2: NVIDIA GeForce RTX 3060 Laptop GPU

ADDITIONAL INFORMATION
Comment 1 Zenon 2026-06-07 21:55:54 UTC
Created attachment 192978 [details]
Showcasing the bug, cursor sizes not visible
Comment 2 Zenon 2026-06-07 21:56:21 UTC
Created attachment 192979 [details]
Showing display settings for reference
Comment 3 Akseli Lahtinen 2026-06-08 08:20:46 UTC
Can confirm in both desktop style and Union style, something is wrong with the dropdown menu.

Operating System: KDE Linux 2026-06-08
KDE Plasma Version: 6.7.80
KDE Frameworks Version: 6.28.0
Qt Version: 6.11.1
Kernel Version: 7.0.11-arch1-1 (64-bit)
Graphics Platform: Wayland
Processors: 12 × AMD Ryzen 5 3600 6-Core Processor
Memory: 16 GiB of RAM (15,5 GiB usable)
Graphics Processor: AMD Radeon RX 6600
Comment 4 Bug Janitor Service 2026-06-08 15:04:03 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/plasma-workspace/-/merge_requests/6701
Comment 5 Akseli Lahtinen 2026-07-15 14:07:21 UTC
Git commit 9ff6f9577f0f00919ed9624667e4629e39cb65c3 by Akseli Lahtinen.
Committed on 15/07/2026 at 11:59.
Pushed by akselmo into branch 'master'.

CursorTheme/main.qml: Ensure the cursor icons and text fit combobox popup

Due to how the cursor sizes are calculated, they're exact
squares, even when the cursor itself looks like a rectangle.

This causes the text being pushed around by the icon bounding
box, even when there is some space.

Remove the unnecessary binding that confuses the popup.
Instead make sure the icon sizes match their actual size.

This patch also fixes some warnings with Unqualified
accesses.

M  +2    -0    kcms/cursortheme/kcmcursortheme.cpp
M  +6    -13   kcms/cursortheme/ui/main.qml

https://invent.kde.org/plasma/plasma-workspace/-/commit/9ff6f9577f0f00919ed9624667e4629e39cb65c3
Comment 6 Akseli Lahtinen 2026-07-17 08:04:36 UTC
Git commit c1ce4015b557e3a32c949d110725656eca609582 by Akseli Lahtinen.
Committed on 17/07/2026 at 07:47.
Pushed by akselmo into branch 'Plasma/6.7'.

CursorTheme/main.qml: Ensure the cursor icons and text fit combobox popup

Due to how the cursor sizes are calculated, they're exact
squares, even when the cursor itself looks like a rectangle.

This causes the text being pushed around by the icon bounding
box, even when there is some space.

Remove the unnecessary binding that confuses the popup.
Instead make sure the icon sizes match their actual size.

This patch also fixes some warnings with Unqualified
accesses.
(cherry picked from commit 9ff6f9577f0f00919ed9624667e4629e39cb65c3)

M  +2    -0    kcms/cursortheme/kcmcursortheme.cpp
M  +6    -13   kcms/cursortheme/ui/main.qml

https://invent.kde.org/plasma/plasma-workspace/-/commit/c1ce4015b557e3a32c949d110725656eca609582