CursorTheme/main.qml: Ensure the cursor icons and text fit combobox popup

Due to how the cursor sizes are calculated, they're exact
squares, even when the cursor itself looks like a rectangle.

This causes the text being pushed around by the icon bounding
box, even when there is some space.

Remove the unnecessary binding that confuses the popup.
Instead make sure the icon sizes match their actual size.

This patch also fixes some warnings with Unqualified
accesses.

BUG: 521187
(cherry picked from commit 9ff6f9577f0f00919ed9624667e4629e39cb65c3)